[project]
name = "estrogen-asah-dci"
version = "0.1.0"
description = "Estrogen state and delayed cerebral ischemia after aneurysmal SAH: a reproducible multi-database ICU pilot (MIMIC-IV + eICU-CRD)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Niels Pacheco" }]
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estrogen_asah_dci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The SPECS ground-truth table and eICU diagnosis strings are intentionally wide
# for readability/alignment.
"src/estrogen_asah_dci/synthetic.py" = ["E501"]
# inline CSS / HTML template lines are intentionally long
"dashboard/build.py" = ["E501"]
